# FuelMix

./: .gitignore  dataAGS.json  history.json  history_storage.py  main.py  pyproject.toml  requirements.txt  theme.py
..bfg-report/2026-07-17/09-19-44/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
assets/: ad_yandex.html
pages/: fuelSettingsUserPage.py  historyPage.py  homePage.py  mapFuelPage.py  userPage.py
test/: test.py
widgets/: navigationPanel.py
