[project]
name = "fuelmix"
version = "1.0.0"
description = "FuelMix"

[tool.flet]
# Точка входа приложения
app.module = "main"
# Каталог с ассетами — совпадает с assets_dir, который передаётся в ft.run()
app.path = "."

# Отображаемое имя приложения (используется как имя .exe и заголовок в проводнике)
product = "FuelMix"
org = "com.fuelmix"
company = "FuelMix"

# Иконка приложения. Flet сгенерирует из неё .ico со всеми нужными размерами
# и встроит его в exe при сборке — именно это заставляет иконку отображаться
# и на самом приложении, и на ярлыке, который на него указывает.
[tool.flet.windows]
icon = "images/logo.png"
