[project]
name = "FuelMix"
version = "1.0.0"
description = "A Flet application with ads"
requires-python = ">=3.9"
dependencies = [
    "flet",
    "flet-ads",  # <--- Зависимость для Python
]

[tool.flet]
org = "com.yourcompany"
product = "FuelMix"

# КРИТИЧНО: Указываем Flutter-пакет flet_ads для сборки
[tool.flet.flutter]
dependencies = [
    "flet_ads"  # <--- Flutter-плагин для рекламы
]

# Для Android: передаем тестовый Application ID
[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-3940256099942544~3347511713"  # Тестовый ID

# Добавляем разрешение для рекламного ID (решает проблемы с загрузкой)
[tool.flet.android.permission]
"com.google.android.gms.permission.AD_ID" = true